# novu-rust

./: Cargo.toml  README.md
examples/trigger_single/: Cargo.toml
src/: changes.rs  client.rs  environments.rs  executation_details.rs  feeds.rs  inbound_parse.rs  integrations.rs  layouts.rs  lib.rs  messages.rs  notification_groups.rs  organizations.rs  subscribers.rs  tenants.rs  topics.rs  trigger.rs  workflow_override.rs
src/changes/: mod.rs  types.rs
src/environments/: mod.rs  types.rs
src/execution_details/: mod.rs  types.rs
src/feeds/: mod.rs  types.rs
src/inbound_parse/: mod.rs  types.rs
src/integrations/: mod.rs  types.rs
src/layouts/: mod.rs  types.rs
src/messages/: mod.rs  types.rs
src/models/: activities_response_dto.rs  activity_graph_states_response.rs  activity_notification_execution_detail_response_dto.rs  activity_notification_job_response_dto.rs  activity_notification_response_dto.rs  activity_notification_step_response_dto.rs  activity_notification_subscriber_response_dto.rs  activity_notification_template_response_dto.rs  activity_stats_response_dto.rs  add_subscribers_request_dto.rs  api_key.rs  bulk_apply_change_dto.rs  bulk_subscriber_create_dto.rs  bulk_trigger_event_dto.rs  change_response_dto.rs  change_workflow_status_request_dto.rs  changes_controller_bulk_apply_diff_201_response.rs  changes_response_dto.rs  channel_credentials.rs  channel_preference.rs  channel_settings.rs  create_feed_request_dto.rs  create_integration_request_dto.rs  create_layout_response_dto.rs  create_notification_group_request_dto.rs  credentials_dto.rs  (+162 more)
(+15 files in other folders)
