[package]
name = "novu-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
serde_qs = "0.13.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
thiserror = "1.0.60"

[workspace]
members = ["examples/*"]
